[project]
name = "prisma-flow"
version = "0.5.0"  # semantic-release
description = "Lightweight Python tools for generating PRISMA-style flow diagrams without system dependencies."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "BSD-3-Clause"
authors = [
  { name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com" }
]
keywords = [
  "prisma",
  "systematic-review",
  "scoping-review",
  "evidence-synthesis",
  "literature-review",
  "svg",
  "python",
  "open-science",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "pydantic>=2",
  "resvg>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/osl-incubator/prisma-flow"
Repository = "https://github.com/osl-incubator/prisma-flow"
Issues = "https://github.com/osl-incubator/prisma-flow/issues"
Documentation = "https://osl-incubator.github.io/prisma-flow/"

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
ui = ["ipywidgets>=8"]
dev = [
  "douki>=0.12.1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3",
  "makim==1.29.0",
]
docs = []


[tool.poetry.group.dev.dependencies]
quarto-cli = ">=1.9.0"
pyyaml  = ">=6"
douki = ">=0.12.1"
pytest  = ">=8"
pytest-cov  = ">=5"
ruff  = ">=0.6"
mypy  = ">=1.10"
pre-commit = ">=3"
makim = "==1.29.0"

[project.scripts]
prisma-flow = "prismaflow.cli:main"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "prismaflow", from = "src" },
]
include = [
  "src/prismaflow/py.typed",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "RUF",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/prismaflow/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
